make Id abstract class, merge behaviour and simplify it